src/include/flutter_ffi_uvc.h

// One camera per session. Sessions share nothing except the log level.
// Every call may arrive on any thread, including several threads for one
// session, and backends serialize internally. Listeners may run on native
// threads. A NULL session behaves like a closed one. Int-returning calls return
// UVC_ERROR_INVALID_PARAM (-2), uvc_ctrl_get returns INT32_MIN, JSON writers
// return 0, and uvc_last_error returns "".
typedef struct uvc_session uvc_session_t;
FFI_PLUGIN_EXPORT int uvc_copy_latest_frame_rgba_transformed(
    uvc_session_t *session,
    uint8_t *buffer,
    int buffer_length,
    int rotation,
    int flip_h,
    int flip_v,
    int *out_width,
    int *out_height,
    int64_t *out_sequence);
FFI_PLUGIN_EXPORT int uvc_get_stream_stats_json(
    uvc_session_t *session,
    uint8_t *buffer,
    int buffer_length);
FFI_PLUGIN_EXPORT int uvc_get_supported_modes_json(
    uvc_session_t *session,
    uint8_t *buffer,
    int buffer_length);
// Last error text of the session. Valid until the session is destroyed.
FFI_PLUGIN_EXPORT const char *uvc_last_error(uvc_session_t *session);
// Process-wide native log level (UVC_LOG_LEVEL_*).
FFI_PLUGIN_EXPORT void uvc_set_log_level(int level);
// Preview transform: rotation is 0, 90, 180, or 270 (clockwise degrees).
// flip_h mirrors the output left-right; flip_v mirrors it top-bottom.
// Transforms are applied during preview blit to the attached Flutter Texture
// and do not affect the RGBA buffer returned by copyLatestFrame.
FFI_PLUGIN_EXPORT void uvc_set_preview_transform(
    uvc_session_t *session,
    int rotation,
    int flip_h,
    int flip_v);
// Reads back the current preview transform. Desktop plugin layers use this to
// render the attached Flutter texture with the same transform the preview
// blit applies. Null out-pointers are allowed.
FFI_PLUGIN_EXPORT void uvc_get_preview_transform(
    uvc_session_t *session,
    int *rotation,
    int *flip_h,
    int *flip_v);
// Encodes the latest preview frame to JPEG.
// rotation/flip semantics match uvc_copy_latest_frame_rgba_transformed and are
// applied before encoding; quality is clamped to 1-100. Returns the number of
// JPEG bytes written to buffer, or 0 on failure (no frame yet, buffer too
// small, or encoder error; see uvc_last_error). out_width/out_height report
// the encoded (post-transform) dimensions; out_sequence reports the source
// frame sequence.
FFI_PLUGIN_EXPORT int uvc_take_picture_jpeg(
    uvc_session_t *session,
    uint8_t *buffer,
    int buffer_length,
    int quality,
    int rotation,
    int flip_h,
    int flip_v,
    int *out_width,
    int *out_height,
    int64_t *out_sequence);
// Video recording (MP4 / H.264).
//
// Records the session's preview stream to an MP4 file while the preview
// keeps running. Requires an active preview: the recording locks onto the
// current frame dimensions, and frames whose dimensions later stop matching
// (e.g. after a mode switch) are dropped. rotation/flip semantics match
// uvc_take_picture_jpeg and are captured at start; the transform stays fixed
// for the whole recording. Recording is finalized automatically when the
// preview stops or the device closes.
//
// path is UTF-8. bitrate_bps <= 0 selects a default from resolution and fps.
// fps_hint <= 0 defaults to 30; it seeds encoder rate control while sample
// timestamps always follow actual frame arrival times.
// Returns 0 on success or a negative libuvc-style error code.
FFI_PLUGIN_EXPORT int uvc_start_recording(
    uvc_session_t *session,
    const char *path,
    int bitrate_bps,
    int fps_hint,
    int rotation,
    int flip_h,
    int flip_v);
// Stops recording, drains the encoder, and finalizes the MP4 file.
// Returns 0 when the file was finalized, negative on failure. Calling with no
// active recording returns 0.
FFI_PLUGIN_EXPORT int uvc_stop_recording(uvc_session_t *session);
FFI_PLUGIN_EXPORT int uvc_is_recording(uvc_session_t *session);
// Returns JSON array of all controls the device supports, with min/max/def/cur/res fields.
// Returns number of bytes written, or 0 on failure.
FFI_PLUGIN_EXPORT int uvc_ctrl_get_all_json(uvc_session_t *session, uint8_t *buffer, int buffer_length);
// Returns JSON array of controls present in descriptor bmControls only.
// Debug helper: does not probe GET_CUR/GET_MIN/GET_MAX.
FFI_PLUGIN_EXPORT int uvc_ctrl_get_bm_controls_json(uvc_session_t *session, uint8_t *buffer, int buffer_length);
// Returns the current value of a control. Returns INT32_MIN on error.
FFI_PLUGIN_EXPORT int32_t uvc_ctrl_get(uvc_session_t *session, int ctrl_id);
// Sets a control value. Returns 0 (UVC_SUCCESS) on success, negative on error.
FFI_PLUGIN_EXPORT int uvc_ctrl_set(uvc_session_t *session, int ctrl_id, int32_t value);
// Compound controls that cannot be represented as a single integer value.
FFI_PLUGIN_EXPORT int uvc_get_white_balance_component_json(uvc_session_t *session, uint8_t *buffer, int buffer_length);