lib/src/flutter_ffi_uvc_bindings_generated.dart


  int uvc_get_stream_stats_json(
    ffi.Pointer<uvc_session_t> session,
    ffi.Pointer<ffi.Uint8> buffer,
    int buffer_length,
  ) {
    return _uvc_get_stream_stats_json(session, buffer, buffer_length);
  }

  late final _uvc_get_stream_stats_jsonPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<uvc_session_t>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
          )
        >
      >('uvc_get_stream_stats_json');
  late final _uvc_get_stream_stats_json = _uvc_get_stream_stats_jsonPtr
      .asFunction<
        int Function(ffi.Pointer<uvc_session_t>, ffi.Pointer<ffi.Uint8>, int)
      >();

  int uvc_get_supported_modes_json(
    ffi.Pointer<uvc_session_t> session,
    ffi.Pointer<ffi.Uint8> buffer,
    int buffer_length,
  ) {
    return _uvc_get_supported_modes_json(session, buffer, buffer_length);
  }

  late final _uvc_get_supported_modes_jsonPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<uvc_session_t>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
          )
        >
      >('uvc_get_supported_modes_json');
  late final _uvc_get_supported_modes_json = _uvc_get_supported_modes_jsonPtr
      .asFunction<
        int Function(ffi.Pointer<uvc_session_t>, ffi.Pointer<ffi.Uint8>, int)
      >();

  /// Last error text of the session. Valid until the session is destroyed.
  ffi.Pointer<ffi.Char> uvc_last_error(ffi.Pointer<uvc_session_t> session) {
    return _uvc_last_error(session);
  }

  late final _uvc_last_errorPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<uvc_session_t>)
        >
      >('uvc_last_error');
  late final _uvc_last_error = _uvc_last_errorPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<uvc_session_t>)>();

  /// Process-wide native log level (UVC_LOG_LEVEL_*).
  void uvc_set_log_level(int level) {
    return _uvc_set_log_level(level);
  }

  late final _uvc_set_log_levelPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
        'uvc_set_log_level',
      );
  late final _uvc_set_log_level = _uvc_set_log_levelPtr
      .asFunction<void Function(int)>();

  /// Preview transform: rotation is 0, 90, 180, or 270 (clockwise degrees).
  /// flip_h mirrors the output left-right; flip_v mirrors it top-bottom.
  /// Transforms are applied during preview blit to the attached Flutter Texture
  /// and do not affect the RGBA buffer returned by copyLatestFrame.
  void uvc_set_preview_transform(
    ffi.Pointer<uvc_session_t> session,
    int rotation,
    int flip_h,
    int flip_v,
  ) {
    return _uvc_set_preview_transform(session, rotation, flip_h, flip_v);
  }

  late final _uvc_set_preview_transformPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<uvc_session_t>,
            ffi.Int,
            ffi.Int,
            ffi.Int,
          )
        >
      >('uvc_set_preview_transform');
  late final _uvc_set_preview_transform = _uvc_set_preview_transformPtr
      .asFunction<void Function(ffi.Pointer<uvc_session_t>, int, int, int)>();

  /// Reads back the current preview transform. Desktop plugin layers use this to
  /// render the attached Flutter texture with the same transform the preview
  /// blit applies. Null out-pointers are allowed.
  void uvc_get_preview_transform(
    ffi.Pointer<uvc_session_t> session,
    ffi.Pointer<ffi.Int> rotation,
    ffi.Pointer<ffi.Int> flip_h,
    ffi.Pointer<ffi.Int> flip_v,
  ) {
    return _uvc_get_preview_transform(session, rotation, flip_h, flip_v);
  }

  late final _uvc_get_preview_transformPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<uvc_session_t>,
            ffi.Pointer<ffi.Int>,
            ffi.Pointer<ffi.Int>,
            ffi.Pointer<ffi.Int>,
          )
        >
      >('uvc_get_preview_transform');
  late final _uvc_get_preview_transform = _uvc_get_preview_transformPtr
      .asFunction<
        void Function(
          ffi.Pointer<uvc_session_t>,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Int>,
        )
      >();

  /// Encodes the latest preview frame to JPEG.
  /// rotation/flip semantics match uvc_copy_latest_frame_rgba_transformed and are
  /// applied before encoding; quality is clamped to 1-100. Returns the number of
  /// JPEG bytes written to buffer, or 0 on failure (no frame yet, buffer too
  /// small, or encoder error; see uvc_last_error). out_width/out_height report
  /// the encoded (post-transform) dimensions; out_sequence reports the source
  /// frame sequence.
  int uvc_take_picture_jpeg(
    ffi.Pointer<uvc_session_t> session,
    ffi.Pointer<ffi.Uint8> buffer,
    int buffer_length,
    int quality,
    int rotation,
    int flip_h,
    int flip_v,
    ffi.Pointer<ffi.Int> out_width,
    ffi.Pointer<ffi.Int> out_height,
    ffi.Pointer<ffi.Int64> out_sequence,
  ) {
    return _uvc_take_picture_jpeg(
      session,
      buffer,
      buffer_length,
      quality,
      rotation,
      flip_h,
      flip_v,
      out_width,
      out_height,
      out_sequence,
    );
  }

  late final _uvc_take_picture_jpegPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<uvc_session_t>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Pointer<ffi.Int>,
            ffi.Pointer<ffi.Int>,
            ffi.Pointer<ffi.Int64>,
          )
        >
      >('uvc_take_picture_jpeg');
  late final _uvc_take_picture_jpeg = _uvc_take_picture_jpegPtr
      .asFunction<
        int Function(
          ffi.Pointer<uvc_session_t>,
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          int,
          int,
          int,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Int64>,
        )
      >();

  /// Video recording (MP4 / H.264).
  ///
  /// Records the session's preview stream to an MP4 file while the preview
  /// keeps running. Requires an active preview: the recording locks onto the
  /// current frame dimensions, and frames whose dimensions later stop matching
  /// (e.g. after a mode switch) are dropped. rotation/flip semantics match
  /// uvc_take_picture_jpeg and are captured at start; the transform stays fixed
  /// for the whole recording. Recording is finalized automatically when the
  /// preview stops or the device closes.
  ///
  /// path is UTF-8. bitrate_bps <= 0 selects a default from resolution and fps.
  /// fps_hint <= 0 defaults to 30; it seeds encoder rate control while sample
  /// timestamps always follow actual frame arrival times.
  /// Returns 0 on success or a negative libuvc-style error code.
  int uvc_start_recording(
    ffi.Pointer<uvc_session_t> session,
    ffi.Pointer<ffi.Char> path,
    int bitrate_bps,
    int fps_hint,
    int rotation,
    int flip_h,
    int flip_v,
  ) {
    return _uvc_start_recording(
      session,
      path,
      bitrate_bps,
      fps_hint,
      rotation,
      flip_h,
      flip_v,
    );
  }

  late final _uvc_start_recordingPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<uvc_session_t>,
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
          )
        >
      >('uvc_start_recording');
  late final _uvc_start_recording = _uvc_start_recordingPtr
      .asFunction<
        int Function(
          ffi.Pointer<uvc_session_t>,
          ffi.Pointer<ffi.Char>,
          int,
          int,
          int,
          int,
          int,
        )
      >();

  /// Stops recording, drains the encoder, and finalizes the MP4 file.
  /// Returns 0 when the file was finalized, negative on failure. Calling with no
  /// active recording returns 0.
  int uvc_stop_recording(ffi.Pointer<uvc_session_t> session) {
    return _uvc_stop_recording(session);
  }

  late final _uvc_stop_recordingPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<uvc_session_t>)>>(
        'uvc_stop_recording',
      );
  late final _uvc_stop_recording = _uvc_stop_recordingPtr
      .asFunction<int Function(ffi.Pointer<uvc_session_t>)>();

  int uvc_is_recording(ffi.Pointer<uvc_session_t> session) {
    return _uvc_is_recording(session);
  }

  late final _uvc_is_recordingPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<uvc_session_t>)>>(
        'uvc_is_recording',
      );
  late final _uvc_is_recording = _uvc_is_recordingPtr
      .asFunction<int Function(ffi.Pointer<uvc_session_t>)>();

  /// Returns JSON array of all controls the device supports, with min/max/def/cur/res fields.
  /// Returns number of bytes written, or 0 on failure.
  int uvc_ctrl_get_all_json(
    ffi.Pointer<uvc_session_t> session,
    ffi.Pointer<ffi.Uint8> buffer,
    int buffer_length,
  ) {
    return _uvc_ctrl_get_all_json(session, buffer, buffer_length);
  }

  late final _uvc_ctrl_get_all_jsonPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<uvc_session_t>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
          )
        >
      >('uvc_ctrl_get_all_json');
  late final _uvc_ctrl_get_all_json = _uvc_ctrl_get_all_jsonPtr
      .asFunction<
        int Function(ffi.Pointer<uvc_session_t>, ffi.Pointer<ffi.Uint8>, int)
      >();

  /// Returns JSON array of controls present in descriptor bmControls only.
  /// Debug helper: does not probe GET_CUR/GET_MIN/GET_MAX.
  int uvc_ctrl_get_bm_controls_json(
    ffi.Pointer<uvc_session_t> session,
    ffi.Pointer<ffi.Uint8> buffer,
    int buffer_length,
  ) {
    return _uvc_ctrl_get_bm_controls_json(session, buffer, buffer_length);
  }

  late final _uvc_ctrl_get_bm_controls_jsonPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<uvc_session_t>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
          )
        >
      >('uvc_ctrl_get_bm_controls_json');
  late final _uvc_ctrl_get_bm_controls_json = _uvc_ctrl_get_bm_controls_jsonPtr
      .asFunction<
        int Function(ffi.Pointer<uvc_session_t>, ffi.Pointer<ffi.Uint8>, int)
      >();

  /// Returns the current value of a control. Returns INT32_MIN on error.
  int uvc_ctrl_get(ffi.Pointer<uvc_session_t> session, int ctrl_id) {
    return _uvc_ctrl_get(session, ctrl_id);
  }

  late final _uvc_ctrl_getPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<uvc_session_t>, ffi.Int)
        >
      >('uvc_ctrl_get');
  late final _uvc_ctrl_get = _uvc_ctrl_getPtr
      .asFunction<int Function(ffi.Pointer<uvc_session_t>, int)>();

  /// Sets a control value. Returns 0 (UVC_SUCCESS) on success, negative on error.
  int uvc_ctrl_set(ffi.Pointer<uvc_session_t> session, int ctrl_id, int value) {
    return _uvc_ctrl_set(session, ctrl_id, value);
  }

  late final _uvc_ctrl_setPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<uvc_session_t>, ffi.Int, ffi.Int32)
        >
      >('uvc_ctrl_set');
  late final _uvc_ctrl_set = _uvc_ctrl_setPtr
      .asFunction<int Function(ffi.Pointer<uvc_session_t>, int, int)>();

  /// Compound controls that cannot be represented as a single integer value.
  int uvc_get_white_balance_component_json(
    ffi.Pointer<uvc_session_t> session,
    ffi.Pointer<ffi.Uint8> buffer,
    int buffer_length,
  ) {
    return _uvc_get_white_balance_component_json(
      session,
      buffer,
      buffer_length,
    );
  }
